plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

compileJava {
	options.compilerArgs << '-Xlint'
}

group = 'com.disk91'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
	maven {
		url "https://repo.eclipse.org/content/repositories/paho-releases/"
	}
}

bootJar {
	launchScript()
}

dependencies {
	compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation group: 'org.eclipse.paho', name:'org.eclipse.paho.client.mqttv3', version: '1.2.5'
	implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.14.4'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.5'
//	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.15'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version : '2.8.5'
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.80'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.6'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation group: 'org.flywaydb', name: 'flyway-core', version: '11.3.4'

	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'
	runtimeOnly group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '11.3.4'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation group: 'io.zonky.test', name: 'embedded-postgres', version: '2.1.0'
	testImplementation group: 'io.zonky.test', name: 'embedded-database-spring-test', version: '2.6.0'

    //testImplementation group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo', version: '4.18.1'
}

tasks.named('test') {
    jvmArgs = [
            '-XX:+EnableDynamicAgentLoading',
    ]
    useJUnitPlatform()
}
